--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,10 +2,4 @@
 deployment:
  tasks:
  - export DEPLOYPATH=/home/user/public_html/
- - /bin/cp index.html $DEPLOYPATH
- - /bin/cp nav.html $DEPLOYPATH
- - /bin/cp info.css $DEPLOYPATH
- - /bin/cp style.css $DEPLOYPATH
- - /bin/cp -R sta $DEPLOYPATH
- - /bin/cp -R dyn $DEPLOYPATH
- - /bin/cp -R sol $DEPLOYPATH
+ - /bin/cp -r * $DEPLOYPATH
