Add js folder to YAML file

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -8,6 +8,7 @@ deployment:
  - /bin/cp info.css $DEPLOYPATH
  - /bin/cp icomoon.css $DEPLOYPATH
  - /bin/cp style.css $DEPLOYPATH
+ - /bin/cp -R js $DEPLOYPATH
  - /bin/cp -R sta $DEPLOYPATH
  - /bin/cp -R dyn $DEPLOYPATH
  - /bin/cp -R sol $DEPLOYPATH
