--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/svelte": "^5.7.0",
     "astro": "^4.12.3",
+    "bootstrap-icons": "^1.11.3",
     "fuse.js": "^7.0.0",
     "mathjax": "^3.2.2",
     "svelte": "^4.2.18",
