--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^4.12.3",
     "bootstrap-icons": "^1.11.3",
     "fuse.js": "^7.0.0",
+    "highlight.js": "^11.10.0",
     "mathjax": "^3.2.2",
     "svelte": "^4.2.18",
     "typescript": "^5.5.4"
